--- a/StarcraftWatch/Base.lproj/Main.storyboard
+++ b/StarcraftWatch/Base.lproj/Main.storyboard
@@ -142,17 +142,35 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="nCx-CT-KrP">
-                                <rect key="frame" x="0.0" y="0.0" width="1920" height="1080"/>
+                                <rect key="frame" x="50" y="50" width="1820" height="980"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DVe-Gk-rRx" userLabel="Video View">
-                                        <rect key="frame" x="0.0" y="0.0" width="1920" height="979.5"/>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                    </view>
+                                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="0HY-is-QKd">
+                                        <rect key="frame" x="0.0" y="0.0" width="1820" height="743.5"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="R5T-B5-SHd">
+                                                <rect key="frame" x="0.0" y="372" width="885" height="0.0"/>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AJj-nu-5cL">
+                                                <rect key="frame" x="935" y="361.5" width="885" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vun-pJ-CT4">
+                                        <rect key="frame" x="0.0" y="793.5" width="1820" height="86"/>
+                                        <inset key="contentEdgeInsets" minX="40" minY="20" maxX="40" maxY="20"/>
+                                        <state key="normal" title="Play"/>
+                                        <connections>
+                                            <action selector="playButtonTapped:" destination="rLd-jr-JLD" eventType="primaryActionTriggered" id="O35-lt-3Ws"/>
+                                        </connections>
+                                    </button>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="sYE-yz-wLF">
-                                        <rect key="frame" x="0.0" y="1029.5" width="1920" height="50.5"/>
+                                        <rect key="frame" x="0.0" y="929.5" width="1820" height="50.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Video" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7fb-wk-FMc" userLabel="Title Label">
-                                                <rect key="frame" x="15" y="15" width="1890" height="20.5"/>
+                                                <rect key="frame" x="15" y="15" width="1790" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
@@ -164,12 +182,15 @@
                             </stackView>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="nCx-CT-KrP" firstAttribute="top" secondItem="Lid-q6-5vH" secondAttribute="bottom" id="OPa-NL-cZx"/>
-                            <constraint firstAttribute="trailing" secondItem="nCx-CT-KrP" secondAttribute="trailing" id="UKP-Kh-4Yt"/>
-                            <constraint firstItem="joC-QN-tcG" firstAttribute="top" secondItem="nCx-CT-KrP" secondAttribute="bottom" id="hwt-Uo-iK8"/>
-                            <constraint firstItem="nCx-CT-KrP" firstAttribute="leading" secondItem="Sem-Ij-f7r" secondAttribute="leading" id="kKL-pI-VG4"/>
+                            <constraint firstItem="nCx-CT-KrP" firstAttribute="top" secondItem="Lid-q6-5vH" secondAttribute="bottom" constant="50" id="OPa-NL-cZx"/>
+                            <constraint firstAttribute="trailing" secondItem="nCx-CT-KrP" secondAttribute="trailing" constant="50" id="UKP-Kh-4Yt"/>
+                            <constraint firstItem="joC-QN-tcG" firstAttribute="top" secondItem="nCx-CT-KrP" secondAttribute="bottom" constant="50" id="hwt-Uo-iK8"/>
+                            <constraint firstItem="nCx-CT-KrP" firstAttribute="leading" secondItem="Sem-Ij-f7r" secondAttribute="leading" constant="50" id="kKL-pI-VG4"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="playButton" destination="vun-pJ-CT4" id="iJf-jq-MNK"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xpr-xl-L73" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
